--- a/UI/TestMod.ui
+++ b/UI/TestMod.ui
@@ -24,22 +24,42 @@
       </property>
       <property name="styleSheet">
        <string notr="true">QPushButton{
+	color: rgb(0, 0, 0);
  	padding: .25em;
  	border: 1px solid black;
  	border-radius: 0.4em;
 }
-
 QSpinBox{
 	padding: .25em;
 	border: 1px solid rgb(42, 54, 59);
 	border-bottom: 2px solid rgb(232, 74, 95);
 	border-radius: 5px;
-}QComboBox{
+}
+QSpinBox::up-button {
+    subcontrol-origin: border;
+    subcontrol-position: top right; 
+	image: url(/Users/theor/Documents/School Work/Spring 2022/Senior-Project/Assets/Images/thinUpArrow.png);
+    width: 18px;
+	height: 18px;
+}
+QSpinBox::down-button {
+    subcontrol-origin: border;
+    subcontrol-position: bottom right; 
+	image: url(/Users/theor/Documents/School Work/Spring 2022/Senior-Project/Assets/Images/thinDownArrow.png);
+    width: 18px;
+	height: 18px;
+}
+QComboBox{
 	
 	padding: .25em;
 	border:1px solid rgb(42, 54, 59);
 	border-bottom: 2px Solid rgb(232, 74, 95);
 	border-radius: 5px;
+}
+QComboBox::down-arrow {
+    image: url(/Users/theor/Documents/School Work/Spring 2022/Senior-Project/Assets/Images/thinDownArrow.png);
+	width:16px;
+	height:16px
 }
 QComboBox::drop-down {
     subcontrol-origin: padding;
@@ -65,6 +85,9 @@ QComboBox::drop-down {
          <height>184</height>
         </rect>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(216, 208, 160);</string>
+       </property>
        <layout class="QGridLayout" name="gridLayout">
         <item row="5" column="1">
          <widget class="QComboBox" name="enemyComboBox_4">
@@ -72,6 +95,9 @@ QComboBox::drop-down {
            <font>
             <family>Merriweather</family>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
           </property>
           <item>
            <property name="text">
@@ -152,6 +178,9 @@ QComboBox::drop-down {
             <family>Merriweather</family>
            </font>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
+          </property>
           <property name="minimum">
            <number>1</number>
           </property>
@@ -167,6 +196,9 @@ QComboBox::drop-down {
             <family>Merriweather</family>
            </font>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
+          </property>
           <property name="minimum">
            <number>1</number>
           </property>
@@ -181,6 +213,9 @@ QComboBox::drop-down {
            <font>
             <family>Merriweather</family>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
           </property>
           <property name="minimum">
            <number>1</number>
@@ -210,18 +245,28 @@ background-color: rgb(153, 184, 152);</string>
             <family>Merriweather</family>
            </font>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
+          </property>
          </widget>
         </item>
         <item row="5" column="3" colspan="2">
          <widget class="QPushButton" name="pushButton">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="font">
            <font>
             <family>Merriweather</family>
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">color: rgb(42, 54, 59);
-background-color: rgb(232, 74, 95);</string>
+           <string notr="true">QPushButton:disabled {
+                        background-color: gray;
+            }
+QPushButton:enabled{
+	background-color: rgb(204, 204, 204);
+}</string>
           </property>
           <property name="text">
            <string>Genorate</string>
@@ -262,6 +307,9 @@ background-color: rgb(232, 74, 95);</string>
             <family>Merriweather</family>
            </font>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
+          </property>
           <item>
            <property name="text">
             <string>Fighter</string>
@@ -290,6 +338,9 @@ background-color: rgb(232, 74, 95);</string>
            <font>
             <family>Merriweather</family>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
           </property>
           <property name="minimum">
            <number>1</number>
@@ -320,6 +371,9 @@ background-color: rgb(232, 74, 95);</string>
            <font>
             <family>Merriweather</family>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
           </property>
           <item>
            <property name="text">
@@ -355,6 +409,9 @@ background-color: rgb(232, 74, 95);</string>
             <family>Merriweather</family>
            </font>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
+          </property>
           <property name="minimum">
            <number>1</number>
           </property>
@@ -369,6 +426,9 @@ background-color: rgb(232, 74, 95);</string>
            <font>
             <family>Merriweather</family>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 255);</string>
           </property>
           <item>
            <property name="text">
